// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectAccountPage should render correctly 1`] = `
<div>
  <div
    class="connect-account-page woocommerce-payments-page is-narrow"
  >
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="connect-account-page__heading"
        >
          <img
            alt="logo"
            src="assets/images/woopayments.svg"
          />
          <h2>
            Hi, Welcome to WooPayments!
          </h2>
        </div>
        <div
          class="connect-account-page__content"
        >
          <div
            class="wcpay-component-tip-box yellow"
          >
            <svg
              height="24"
              viewBox="-4 -4 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M8 1.33a4.67 4.67 0 0 0-2.67 8.5v1.5c0 .37.3.67.67.67h4c.37 0 .67-.3.67-.67v-1.5A4.66 4.66 0 0 0 8 1.33ZM6 14c0 .37.3.67.67.67h2.66c.37 0 .67-.3.67-.67v-.67H6V14Zm3.33-4.87.57-.4a3.33 3.33 0 1 0-3.8 0l.57.4v1.54h2.66V9.13Z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="wcpay-component-tip-box__content"
            >
              You'll need to verify your business and payment details to 
              <button
                class="components-button is-link"
                type="button"
              >
                enable deposits.
              </button>
            </div>
          </div>
        </div>
        <div
          class="connect-account-page__payment-methods"
        >
          <div
            class="connect-account-page__payment-methods__icons"
          >
            <img
              alt="Visa"
              class="payment-method__icon"
              src="assets/images/cards/visa.svg"
            />
            <img
              alt="Mastercard"
              class="payment-method__icon"
              src="assets/images/cards/mastercard.svg"
            />
            <img
              alt="American Express"
              class="payment-method__icon"
              src="assets/images/cards/amex.svg"
            />
            <img
              alt="Cartes Bancaires"
              class="payment-method__icon"
              src="assets/images/cards/cb.svg"
            />
            <img
              alt="Discover"
              class="payment-method__icon"
              src="assets/images/cards/discover.svg"
            />
            <img
              alt="Diners Club"
              class="payment-method__icon"
              src="assets/images/cards/diners.svg"
            />
            <img
              alt="Apple Pay"
              class="payment-method__icon"
              src="assets/images/cards/apple-pay.svg"
            />
            <img
              alt="Google Pay"
              class="payment-method__icon"
              src="assets/images/cards/google-pay.svg"
            />
            <img
              alt="WooPay"
              class="payment-method__icon"
              src="assets/images/payment-methods/woo.svg"
            />
            <img
              alt="Sofort"
              class="payment-method__icon"
              src="assets/images/payment-methods/sofort.svg"
            />
            <img
              alt="Affirm"
              class="payment-method__icon"
              src="assets/images/payment-methods/affirm-badge.svg"
            />
            <img
              alt="Afterpay"
              class="payment-method__icon"
              src="assets/images/payment-methods/afterpay-logo.svg"
            />
            <span>
              & more.
            </span>
          </div>
          <div
            class="connect-account-page__payment-methods__description"
          >
            <div>
              <p>
                Deposits
              </p>
              <span>
                Automatic - Daily
              </span>
            </div>
            <div
              class="connect-account-page__payment-methods__description__divider"
            />
            <div>
              <p>
                Payments capture
              </p>
              <span>
                Capture on order
              </span>
            </div>
            <div
              class="connect-account-page__payment-methods__description__divider"
            />
            <div>
              <p>
                Recurring payments
              </p>
              <span>
                Supported
              </span>
            </div>
          </div>
        </div>
        <div
          class="connect-account-page__buttons"
        >
          <button
            class="components-button is-primary"
            type="button"
          >
            Verify business details
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="connect-account-page__sandbox-mode-panel components-panel"
    >
      <div
        class="components-panel__body"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="false"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                />
              </svg>
            </span>
            I'm setting up a store for someone else.
          </button>
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConnectAccountPage should render correctly when on-boarding disabled 1`] = `
<div>
  <div
    class="connect-account-page woocommerce-payments-page is-narrow"
  >
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-card__body components-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          We've temporarily paused new account creation. We'll notify you when we resume!
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`ConnectAccountPage should render correctly with WooPay eligible 1`] = `
<div>
  <div
    class="connect-account-page woocommerce-payments-page is-narrow"
  >
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="connect-account-page__heading"
        >
          <img
            alt="logo"
            src="assets/images/woopayments.svg"
          />
          <h2>
            Hi, Welcome to WooPayments!
          </h2>
        </div>
        <div
          class="connect-account-page__content"
        >
          <div
            class="wcpay-component-tip-box yellow"
          >
            <svg
              height="24"
              viewBox="-4 -4 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M8 1.33a4.67 4.67 0 0 0-2.67 8.5v1.5c0 .37.3.67.67.67h4c.37 0 .67-.3.67-.67v-1.5A4.66 4.66 0 0 0 8 1.33ZM6 14c0 .37.3.67.67.67h2.66c.37 0 .67-.3.67-.67v-.67H6V14Zm3.33-4.87.57-.4a3.33 3.33 0 1 0-3.8 0l.57.4v1.54h2.66V9.13Z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="wcpay-component-tip-box__content"
            >
              You'll need to verify your business and payment details to 
              <button
                class="components-button is-link"
                type="button"
              >
                enable deposits.
              </button>
            </div>
          </div>
        </div>
        <div
          class="connect-account-page__payment-methods"
        >
          <div
            class="connect-account-page__payment-methods__icons"
          >
            <img
              alt="Visa"
              class="payment-method__icon"
              src="assets/images/cards/visa.svg"
            />
            <img
              alt="Mastercard"
              class="payment-method__icon"
              src="assets/images/cards/mastercard.svg"
            />
            <img
              alt="American Express"
              class="payment-method__icon"
              src="assets/images/cards/amex.svg"
            />
            <img
              alt="Cartes Bancaires"
              class="payment-method__icon"
              src="assets/images/cards/cb.svg"
            />
            <img
              alt="Discover"
              class="payment-method__icon"
              src="assets/images/cards/discover.svg"
            />
            <img
              alt="Diners Club"
              class="payment-method__icon"
              src="assets/images/cards/diners.svg"
            />
            <img
              alt="Apple Pay"
              class="payment-method__icon"
              src="assets/images/cards/apple-pay.svg"
            />
            <img
              alt="Google Pay"
              class="payment-method__icon"
              src="assets/images/cards/google-pay.svg"
            />
            <img
              alt="WooPay"
              class="payment-method__icon"
              src="assets/images/payment-methods/woo.svg"
            />
            <img
              alt="WooPay"
              class="payment-method__icon"
              src="assets/images/payment-methods/woo.svg"
            />
            <img
              alt="Sofort"
              class="payment-method__icon"
              src="assets/images/payment-methods/sofort.svg"
            />
            <img
              alt="Affirm"
              class="payment-method__icon"
              src="assets/images/payment-methods/affirm-badge.svg"
            />
            <img
              alt="Afterpay"
              class="payment-method__icon"
              src="assets/images/payment-methods/afterpay-logo.svg"
            />
            <span>
              & more.
            </span>
          </div>
          <div
            class="connect-account-page__payment-methods__description"
          >
            <div>
              <p>
                Deposits
              </p>
              <span>
                Automatic - Daily
              </span>
            </div>
            <div
              class="connect-account-page__payment-methods__description__divider"
            />
            <div>
              <p>
                Payments capture
              </p>
              <span>
                Capture on order
              </span>
            </div>
            <div
              class="connect-account-page__payment-methods__description__divider"
            />
            <div>
              <p>
                Recurring payments
              </p>
              <span>
                Supported
              </span>
            </div>
          </div>
        </div>
        <div
          class="connect-account-page__buttons"
        >
          <button
            class="components-button is-primary"
            type="button"
          >
            Verify business details
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="connect-account-page__sandbox-mode-panel components-panel"
    >
      <div
        class="components-panel__body"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="false"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                />
              </svg>
            </span>
            I'm setting up a store for someone else.
          </button>
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConnectAccountPage should render correctly with an incentive 1`] = `
<div>
  <div
    class="connect-account-page woocommerce-payments-page is-narrow"
  >
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="connect-account-page__heading"
        >
          <img
            alt="logo"
            src="assets/images/woopayments.svg"
          />
          <h2>
            Hi, Welcome to WooPayments!
          </h2>
        </div>
        <div
          class="connect-account-page__content"
        >
          <div
            class="wcpay-component-tip-box yellow"
          >
            <svg
              height="24"
              viewBox="-4 -4 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M8 1.33a4.67 4.67 0 0 0-2.67 8.5v1.5c0 .37.3.67.67.67h4c.37 0 .67-.3.67-.67v-1.5A4.66 4.66 0 0 0 8 1.33ZM6 14c0 .37.3.67.67.67h2.66c.37 0 .67-.3.67-.67v-.67H6V14Zm3.33-4.87.57-.4a3.33 3.33 0 1 0-3.8 0l.57.4v1.54h2.66V9.13Z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="wcpay-component-tip-box__content"
            >
              You'll need to verify your business and payment details to 
              <button
                class="components-button is-link"
                type="button"
              >
                enable deposits.
              </button>
            </div>
          </div>
        </div>
        <div
          class="connect-account-page__payment-methods"
        >
          <div
            class="connect-account-page__payment-methods__icons"
          >
            <img
              alt="Visa"
              class="payment-method__icon"
              src="assets/images/cards/visa.svg"
            />
            <img
              alt="Mastercard"
              class="payment-method__icon"
              src="assets/images/cards/mastercard.svg"
            />
            <img
              alt="American Express"
              class="payment-method__icon"
              src="assets/images/cards/amex.svg"
            />
            <img
              alt="Cartes Bancaires"
              class="payment-method__icon"
              src="assets/images/cards/cb.svg"
            />
            <img
              alt="Discover"
              class="payment-method__icon"
              src="assets/images/cards/discover.svg"
            />
            <img
              alt="Diners Club"
              class="payment-method__icon"
              src="assets/images/cards/diners.svg"
            />
            <img
              alt="Apple Pay"
              class="payment-method__icon"
              src="assets/images/cards/apple-pay.svg"
            />
            <img
              alt="Google Pay"
              class="payment-method__icon"
              src="assets/images/cards/google-pay.svg"
            />
            <img
              alt="WooPay"
              class="payment-method__icon"
              src="assets/images/payment-methods/woo.svg"
            />
            <img
              alt="Sofort"
              class="payment-method__icon"
              src="assets/images/payment-methods/sofort.svg"
            />
            <img
              alt="Affirm"
              class="payment-method__icon"
              src="assets/images/payment-methods/affirm-badge.svg"
            />
            <img
              alt="Afterpay"
              class="payment-method__icon"
              src="assets/images/payment-methods/afterpay-logo.svg"
            />
            <span>
              & more.
            </span>
          </div>
          <div
            class="connect-account-page__payment-methods__description"
          >
            <div>
              <p>
                Deposits
              </p>
              <span>
                Automatic - Daily
              </span>
            </div>
            <div
              class="connect-account-page__payment-methods__description__divider"
            />
            <div>
              <p>
                Payments capture
              </p>
              <span>
                Capture on order
              </span>
            </div>
            <div
              class="connect-account-page__payment-methods__description__divider"
            />
            <div>
              <p>
                Recurring payments
              </p>
              <span>
                Supported
              </span>
            </div>
          </div>
        </div>
        <div
          class="connect-account-page__buttons"
        >
          <button
            class="components-button is-primary"
            type="button"
          >
            Verify business details
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="connect-account-page__incentive"
    >
      <div
        class="connect-account-page__incentive-pill"
      >
        Limited time offer
      </div>
      <h2>
        incentive-description*
      </h2>
      <p>
        Discount will be applied to payments processed via WooPayments upon completion of installation, setup, and connection.
      </p>
      <p>
        *See 
        <a
          href="incentive-tc-url"
          rel="noopener noreferrer"
          target="_blank"
        >
          Terms and Conditions
        </a>
         for details.
      </p>
    </div>
    <div
      class="connect-account-page__sandbox-mode-panel components-panel"
    >
      <div
        class="components-panel__body"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="false"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                />
              </svg>
            </span>
            I'm setting up a store for someone else.
          </button>
        </h2>
      </div>
    </div>
  </div>
</div>
`;
